chore: improve app configuration and dependency management
- Configure model behavior with automatic eager loading and unguarded attributes
- Add database destructive command protection for production
- Update Laravel framework from v12.7.2 to v12.8.1
- Standardize code style in ListRoleAction and ListUserAction
- Enhance PHPStan configuration with better path exclusions
- Update development dependencies including Vue Query and ESLint

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -2,15 +2,19 @@ includes:
     - vendor/larastan/larastan/extension.neon
 
 parameters:
+    level: 8
     treatPhpDocTypesAsCertain: false
     paths:
         - app/
-    level: 8
-    ignoreErrors:
-        - '#Class App\\Models\\User uses generic trait Illuminate\\Database\\Eloquent\\Factories\\HasFactory but does not specify its types: TFactory#'
 
     excludePaths:
-        - ./*/*/FileToBeExcluded.php
-        - ./app/Providers/AppServiceProvider.php
-        - ./app/Http/Middleware/*
-        - ./app/Http/Resources/BaseResource.php
+        - ./app/Models/**.php
+        - ./app/Providers/**.php
+        - ./app/Http/Middleware/**
+        - ./app/Http/Resources/**
+        - ./app/Exceptions/**
+        - ./app/Console/Kernel.php
+        - ./app/Http/Kernel.php
+        - ./app/Events/**
+        - ./app/Listeners/**
+        - ./routes/**
