--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
     "barryvdh/laravel-debugbar": "^3.14",
     "barryvdh/laravel-ide-helper": "^3.2",
     "fakerphp/faker": "^1.9.1",
+    "laradumps/laradumps": "^4.2",
     "larastan/larastan": "^3.0",
     "laravel/pint": "^1.0",
     "laravel/sail": "^1.18",
@@ -60,11 +61,12 @@
     ],
     "post-create-project-cmd": [
       "@php artisan key:generate --ansi"
-    ], 
+    ],
     "doc:generate": [
       "php artisan doc:generate"
     ],
-    "test": "pest"
+    "test": "php artisan optimize:clear && php artisan test --env=testing --parallel",
+    "test:coverage": "php artisan optimize:clear && php artisan test --env=testing --parallel --coverage"
   },
   "extra": {
     "laravel": {
