--- a/.env.testing
+++ b/.env.testing
@@ -8,14 +8,17 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-DB_DATABASE=:memory:
-DB_FOREIGN_KEYS=true
+DB_CONNECTION=pgsql
+DB_HOST=db
+DB_PORT=5432
+DB_DATABASE=starterkit_test
+DB_USERNAME=postgres
+DB_PASSWORD=admin
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=array
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync 
+QUEUE_CONNECTION=sync
 SESSION_DRIVER=array
 SESSION_LIFETIME=120
 
