--- a/composer.json
+++ b/composer.json
@@ -79,7 +79,7 @@
         "test:dirty": "php artisan optimize:clear && env APP_ENV=testing php artisan test --env=testing --dirty",
         "test:profile": "php artisan optimize:clear && env APP_ENV=testing php artisan test --env=testing --profile",
         "test:ci": "php artisan optimize:clear && env APP_ENV=testing php artisan test --env=testing --coverage --bail",
-        "run:larastan": "php artisan optimize:clear && ./vendor/bin/phpstan analyse"
+        "run:phpstan": "php artisan optimize:clear && ./vendor/bin/phpstan analyse"
     },
     "extra": {
         "laravel": {
