chore: add htop to Dockerfile and update supervisord configuration for laravel-queue

--- a/docker/SUPERVISOR/supervisord.conf
+++ b/docker/SUPERVISOR/supervisord.conf
@@ -21,12 +21,15 @@ stdout_logfile=/var/log/supervisor/nginx.log
 stderr_logfile=/var/log/supervisor/nginx-error.log
 
 [program:laravel-queue]
-command=/usr/local/bin/php /var/www/html/artisan queue:work --tries=3
+command=/usr/local/bin/php /var/www/html/artisan queue:work --daemon --tries=3 --max-time=3600
 autostart=true
 autorestart=true
 user=www-data
 stdout_logfile=/var/log/supervisor/laravel-queue.log
 stderr_logfile=/var/log/supervisor/laravel-queue-error.log
+stopasgroup=true
+killasgroup=true
+
 
 [program:cron]
 command=crond -f
